Feat: Websocket listener
